<resources>
    <string name="pre_document">上一篇</string>
    <string name="next_document">下一篇</string>
    <string name="doc_not_end">文章没有看完，不能加分哦！</string>
    <string name="time_not_enough">读的太快了哦</string>
    <string name="time_enough">恭喜您，学分+1</string>
    <string name="add_read_failed">网络异常，添加已阅失败</string>
    <string name="no_network">网络异常，请检查您的网络</string>
    <string name="add_read_again">又添加阅读了</string>
    <string name="default_userid">AIRMBA@163.com</string>
    <string name="slogan">不忘初心，方得始终</string>
    <string name="loading">Loading...</string>
    <string name="cancle_favor_from_local">没联网，真确定移出文库？</string>
    <string name="no_account_no_favor">想加入文库，登录先</string>
    <string name="never_reg_no_favor">想加入文库，注册先</string>
    <string name="no_account_no_cancle_favor">想移出文库，登录先</string>
    <string name="cancle_local_favor_success">移出文库</string>
    <string name="no_account_no_like">想好评，登录先</string>
    <string name="no_account_no_credit_read">想获得学分，登录先</string>
    <string name="never_reg_no_like">想好评，注册先</string>
    <string name="never_account_no_credit_read">想阅读积分，注册先</string>
    <string name="cancle_favor_success">移出文库</string>
    <string name="last_document">已经到最后一页，返回看看别的吧</string>
    <string name="login_now">立即登陆</string>
    <string name="register_now">立即注册</string>
    <string name="login_later">暂不登陆</string>
    <string name="reg_later">暂不注册</string>
    <string name="choice_of_logout">注销后将不能使用好评、收藏及学分功能，是否仍要注销？</string>
    <string name="logout_now">注销</string>
    <string name="logout_later">暂不注销</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="sport">运动</string>
    <string name="wine_tasting">品酒</string>
    <string name="health_maintenance">养生</string>
    <string name="manage">管理</string>
    <string name="venture">创业</string>
    <string name="human_resource">人力</string>
    <string name="example">案例</string>
    <string name="sale">销售</string>
    <string name="market">营销</string>
    <string name="financial">金融</string>
    <string name="finance">财务</string>
    <string name="register_for_free">免费注册</string>
    <string name="no_account_now">当前没有账号</string>
    <string name="login_to_skymba_to_record_your_learing_process">登陆空中MBA账号可记录您的学习进度</string>
    <string name="login">登录</string>
    <string name="sky_mba_to_login">空中MBA账号登陆</string>
    <string name="start_delete_offline">开始清除离线</string>
    <string name="deleting_offline">正在清除离线</string>
    <string name="delete_offline">清除离线</string>
    <string name="offline_download">离线下载</string>
    <string name="unlogin">您还未登录，不能进行离线下载</string>
    <string name="offline_on">离线下载打开</string>
    <string name="offline_off">离线下载关闭</string>
    <string name="my_favorite">我的文库</string>
    <string name="favorite_success">加入文库</string>
    <string name="have_favorited">已加入文库</string>
    <string name="favorite_failed">加入文库失败</string>
    <string name="no_doc_located">无网络，且本地没有文章</string>
    <string name="favorite_list">我的文库</string>
    <string name="no_favorite">快来建立属于自己的MBA文库  </string>
    <string name="network_failed"></string>
    <string name="can_not_choose_to_like">如想好评，请您先联网</string>
    <string name="suggest_feedback">意见反馈</string>
    <string name="suggest_one">1.软件运行出错或自动关闭</string>
    <string name="suggest_two">2.行情界面无数据</string>
    <string name="suggest_three">3.界面显示有问题</string>
    <string name="i_have_word_to_say">我有话要说  </string>
    <string name="insert_phone_number">联系方式(QQ号/邮箱/手机号)</string>
    <string name="qq_union_number">QQ群号</string>
    <string name="submit_suggest">提交反馈</string>
    <string name="submit_suggest_when_no_network">想填写意见反馈，联网先</string>
    <string name="delete_offline_when_on_network">想清除离线，联网先</string>
    <string name="delete_offline_when_unlogin">想清除离线，登陆先</string>
    <string name="log_to_sky_mba">登陆空中MBA</string>
    <string name="edit_username_or_email">输入邮箱</string>
    <string name="edit_password">输入密码</string>
    <string name="delete_offline_success">清除离线成功</string>
    <string name="check_favored_files_when_unlogin">想查看文库，登录先</string>
    <string name="submit_suggest_success">感谢您的宝贵意见，我们将尽快改进</string>
    <string name="submit_suggest_fail">意见反馈提交失败</string>
    <string name="favorite_success_local">加入文库</string>
    <string name="local_favored">已加入文库</string>
    <string name="like_success">好评+1</string>
    <string name="have_liked">已经好评</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="reg_email">使用注册邮箱</string>
    <string name="give_a_mark">给我们评分吧</string>
    <string name="credit">积分总额</string>
    <string name="grade_table">成绩单</string>
    <string name="read_level">阅读等级</string>
    <string name="level">级</string>
    <string name="grade">年级:</string>
    <string name="personal_center">个人中心</string>
    <string name="life">生活</string>
    <string name="school_bag">书包</string>
    <string name="sky_mba">空中MBA</string>
    <string name="zero">0</string>
    <string name="about_us">关于我们</string>
    <string name="credit_readed">已经阅读完</string>
    <string name="download">3G/Wi-Fi离线下载</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="updating">正在刷新...</string>
    <string name="last_updated">最近更新:</string>
    <string name="abs">abs</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="app_name">空中MBA</string>
    <string name="message_enter_user_id">User Name</string>
    <string name="message_enter_password">Password</string>
    <string name="message_enter_confirm_password">Retype Password</string>
    <string name="password_does_not_match">Passwords don\'t appear to match!</string>
    <string name="color">Color</string>
    <string name="blur">blur</string>
    <string name="erase">erase</string>
    <string name="src_a_top">SrcATop</string>
    <string name="emboss">Emboss</string>
    <string name="tools">Tools</string>
    <string name="line">Lines</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="line3">Line 3</string>
    <string name="line4">Line 4</string>
    <string name="line5">Line 5</string>
    <string name="save_photo_failed">Cann\'t take photos</string>
    <string name="new_list">New Folder</string>
    <string name="new_note">Create Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="new_photo">Photo Note</string>
    <string name="new_audio">Audio Note</string>
    <string name="new_finger_paint">Finger Painting Note</string>
    <string name="dialog_new_folder">Please input folder name</string>
    <string name="tags">Tag</string>
    <string name="edit_account">Edit Account</string>
    <string name="menu_full_screen">Full Screen</string>
    <string name="menu_launch_full_screen"> Exit full screen</string>
    <string name="menu_add_tag">Add Tag</string>
    <string name="menu_share_view">Share</string>
    <string name="menu_sync_start">Start Sync</string>
    <string name="menu_sync_cancel">Cancel Sync</string>
    <string name="menu_system_set">System Settings</string>
    <string name="menu_new_root_tag">New root tag</string>
    <string name="menu_new_root_location">New root folder</string>
    <string name="menu_clear_empty_location">Clear empty folder</string>
    <string name="wiz_sync_info">Display Sync information</string>
    <string name="wait_for_login">Landing,later\.\.\.</string>
    <string name="front_page">首页</string>
    <string name="loading_later">加载中，请稍后</string>
    <string name="prompt_save_note">Save note?</string>
    <string name="prompt_save_cancel_note">Cancel edit?</string>
    <string name="prompt_save_paint">Save Finger Painting?</string>
    <string name="prompt_save_yes">Save</string>
    <string name="prompt_save_not">Cancel</string>
    <string name="setup_account">Set account</string>
    <string name="about_wiz">About %1$s</string>
    <string name="title">Title</string>
    <string name="exit_skymba">再点一次退出空中 mba</string>
    <string name="error_message_invalid_password">密码错误</string>
    <string name="email_have_reged">用户名已注册</string>
    <string name="note">Content</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="user_id">Accout</string>
    <string name="password">Password</string>
    <string name="save_account">Save</string>
    <string name="remove_account">Delete</string>
    <string name="invalid_password">Error password</string>
    <string name="phone_no_sd_cad">Please insert SD card</string>
    <string name="voice_record_start">Start record\.\.\.</string>
    <string name="voice_record_stop">Stop record\.\.\.</string>
    <string name="search_key_words">Input keyword</string>
    <string name="att_open_errormessage">No app can open the attachment</string>
    <string name="account_with_login">Login</string>
    <string name="download_document">Downloading</string>
    <string name="new_tag">New tag</string>
    <string name="new_tag_name">Please input tag name</string>
    <string name="motified_tag">Edit tag</string>
    <string name="motified_folder">Edit folder</string>
    <string name="dialog_close">close</string>
    <string name="key_public_document">$Full disclosure note</string>
    <string name="key_my_notes">My Notes</string>
    <string name="key_my_drafts">My Drafts</string>
    <string name="key_my_tasks">My Tasks</string>
    <string name="key_my_mobiles">My Mobiles</string>
    <string name="key_delete_items">Deleted</string>
    <string name="key_my_events">My Events</string>
    <string name="key_my_journals">My Journals</string>
    <string name="key_my_emails">My Emails</string>
    <string name="key_completed">Completed</string>
    <string name="key_inbox">Inbox</string>
    <string name="key_my_sticky_notes">My Sticky Notes</string>
    <string name="wiz_setting_system_auto_adapt_to_screen">Note is adapt to phone screen</string>
    <string name="wiz_setting_system_auto_adapt_to_screen_open">Adapt Screen: Open</string>
    <string name="wiz_setting_system_auto_adapt_to_screen_close">Adapt Screen: Close</string>
    <string name="wiz_setting_system_password_protection">Password Protection</string>
    <string name="wiz_setting_system_backup_encryption_certificate">Update encryption certificate from the server</string>
    <string name="wiz_setting_system_password_protection_open">Password Protection:Open</string>
    <string name="wiz_setting_system_password_protection_close">Password Protection:Close</string>
    <string name="wiz_setting_system_password">System Password Settings</string>
    <string name="wiz_setting_system_password_cancel">Cancle password settings</string>
    <string name="wiz_setting_system_password_summary">Please enter the four-digit password</string>
    <string name="wiz_setting_account">Account Settings</string>
    <string name="wiz_setting_summary_no_account">You have no account, please click to create</string>
    <string name="hint_no_account">You have no %1$s account, only %1$s account sync, you can sync</string>
    <string name="wiz_setting_sync">Sync Settings</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="auto_sync_open">Auto Sync: Open</string>
    <string name="auto_sync_close">Auto Sync: Close</string>
    <string name="dialog_search_menu_title">Quick Search</string>
    <string name="dialog_search_bytags_menu_title">Tag combinatorial to search</string>
    <string name="wiz_about_version">Version</string>
    <string name="wiz_about_valuation">Rate %1$s</string>
    <string name="wiz_about_help">User Manual</string>
    <string name="wiz_no_network">The internet isn\'t available</string>
</resources>